mt fix text alignment for multi cta button

--- a/blocks/multi-cta-cards/multi-cta-cards.css
+++ b/blocks/multi-cta-cards/multi-cta-cards.css
@@ -130,6 +130,7 @@
 .multi-cta-cards > div > div > ul + .button-container {
   margin: 0 0 21px;
   padding: 0;
+  text-align: center;
 }
 
 .multi-cta-tooltip-container a:any-link {
